--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 .idea/
-Copy of Plastic Model Weekender 2023 Giveaway Pool Entry Form.csv
+Copy of Plastic Model Weekender 25 Giveaway Pool Entry Form.csv
 pmw25_groomed-entries.csv
-tiltify-export-plastic-model-weekender-2x24-campaign-donations-v2__2024-05-23-2024-05-25.csv
+tiltify-export-plastic-model-weekender-25-fact-donations__2025-06-22-2025-06-27.csv
+Copy of Plastic Model Weekender 25 Giveaway Pool Entry Form (Responses) - Form Responses 1.csv
+main-legacy.py
